--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Dat site title tho
-markdown: redcarpet
-pygments: true
-description: "Write an awesome description for your new site here. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-url: "jekyll-new.joelglovier.com"
+name: Lee Worden research prototype website
+markdown: kramdown
+highlighter: true
+description: "Lee Worden prototype research website"
+#url: "jekyll-new.joelglovier.com"
 permalink: /posts/:title
