Recovered from lost edits, project back together: 1 sp, 2 sp, ZNGI with constraint

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,4 @@ highlighter: true
 description: "Lee Worden prototype research website"
 #url: "jekyll-new.joelglovier.com"
 permalink: /posts/:title
+exclude: wmd_files/SageDynamicsRepo/.git
