longer horns on envelope curve in ZNGI plot

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ description: "Lee Worden prototype research website"
 #url: "jekyll-new.joelglovier.com"
 baseurl: /adaptive-dynamics-research
 permalink: /posts/:title
-exclude: wmd_files/SageDynamicsRepo/.git
+exclude: [ wmd_files/SageDynamicsRepo/.git ]
